更新简历信息：添加新论文、项目和奖项

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="profile-info">
                         <h3>孙蒙鸽</h3>
-                        <p>科学计量学博士</p>
+                        <p>信息管理专业博士研究生</p>
                         <p>中国科学院大学</p>
                     </div>
                 </div>
